manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: klyde
spec:
  replicas: 1
  selector:
    matchLabels: { app: web }
  template:
    metadata:
      labels: { app: web }
    spec:
      containers:
        - name: nginx
          image: ghcr.io/thev1ndu/klyde-web:latest
          ports:
            - containerPort: 80
          resources:
            requests: { memory: "16Mi", cpu: "10m" }
            limits:   { memory: "64Mi", cpu: "100m" }
