manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: klyde
spec:
  clusterIP: None
  selector: { app: db }
  ports:
    - port: 3306
      targetPort: 3306
