manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: 2take1
spec:
  selector: { app: web }
  ports:
    - port: 80
      targetPort: 80
