manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing
  namespace: klyde
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-klyde
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - klyde.lol
      secretName: klyde-tls
  rules:
    - host: klyde.lol
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port: { number: 8080 }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port: { number: 80 }
